@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.11
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed "Trash above requested" not working if no trash amount was set
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.10
 Date: 2020-11-01
